<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/game_title"
            android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/short_game_description"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/disclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/disclaimer"
            app:layout_constraintTop_toBottomOf="@id/short_description"/>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/start_new_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disclaimer"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>