<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Patient1Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/patient1_intro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/patient1_intro" />

            <Button
                android:id="@+id/pain_management_options"
                android:backgroundTint="@color/red"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="Pain Management:\n Click to Select"
                android:textSize="16sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/patient1_intro"
                 />

            <Button
                android:id="@+id/morphine"
                android:text="@string/morphine_4mg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pain_management_options"
                style="@style/order_button"
                android:layout_marginTop="16dp"/>

            <!--TODO change button to blue when clicked, select as many as you want -->

            <Button
                android:id="@+id/dilaudid"
                android:text="@string/dilaudid_hydromorphone_0_5_mg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/morphine"
                style="@style/order_button"/>

            <Button
                android:id="@+id/place_orders_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dilaudid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/complete"
                android:layout_marginTop="16dp"
                />

            <Button
                android:id="@+id/sign_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/place_orders_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="Sign Orders and Finalize Treatment Decision"
                android:layout_marginTop="16dp"
                />

            <!--TODO sign-orders onclick: if not all areas have a selection: "Do you want to continue without making all selections?"-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>